# OS_PS

./: README.md
exercises/exercise01/task1/: CMakeLists.txt
exercises/exercise01/task3/: args.txt  history.txt  run.txt
exercises/exercise02/: Makefile
exercises/exercise02/task1/: Makefile
exercises/exercise02/task2/: Makefile  signal_handler.c  solution.txt
exercises/exercise02/task3/: CMakeLists.txt  Makefile  solution.txt  (+1 more)
exercises/exercise03/: CMakeLists.txt  Hints  Makefile  task3a
exercises/exercise04/: Untitled Document
exercises/exercise05/: CMakeLists.txt
exercises/exercise05/task1/: Makefile  scheduler.c  service.c  task1.txt
exercises/exercise05/task2/: Makefile  solution.txt  task2.c  testCMakeLists.txt
exercises/exercise05/task2crispin/: makefile  task2crispin.c  testCMakeLists.txt
exercises/exercise05/task3/: Makefile  solution.txt  task3.c
exercises/exercise06/: CMakeLists.txt
exercises/exercise06/task1/: Makefile  solution.txt  task1_atomic.c  task1_mutex.c
exercises/exercise06/task2/: Makefile  solution.txt  task2.c
exercises/exercise06/task3/: Makefile  solution.txt  task3.c
exercises/exercise07/: CMakeLists.txt  Makefile
exercises/exercise08/: CMakeLists.txt
exercises/exercise08/task1/: Makefile  server.c  solution.txt
exercises/exercise08/task2/: Makefile  client.c  server.c
exercises/exercise08/task3/: Makefile  myqueue.h  server.c  test.c
exercises/exercise09/: CMakeLists.txt
exercises/exercise09/task1/: Makefile  client.c  server.c  server_test.c
exercises/exercise09/task2/: Makefile  client.c  server.c
exercises/exercise09/task3/: client  client.c  server  server.c
exercises/exercise10/: CMakeLists.txt  Makefile
exercises/exercise10/task1/: Makefile  task1  task1.c
exercises/exercise10/task2/: Makefile  my_program.c  solution.txt  some_library.c
exercises/exercise10/task3/: Makefile  ceasar_chipher.c  library_one.c  library_two.c  map_string  map_string.c  reverse_string.c  xor_string.c
exercises/exercise11/: Makefile
exercises/test/: CMakeLists.txt  main.c
submit/exc01_csbb5525/: task_2.txt  task_3.txt
(+50 files in other folders)
